#Refactor commit.
Для улучшения качества кода:
- Проведена настройка pom для юнит и интеграционного тестирования.