@@ -16,8 +16,6 @@
     <properties>
         <code.coverage.project.folder>${basedir}/../</code.coverage.project.folder>
         <code.coverage.overall.data.folder>${basedir}/../target/aggregate.exec</code.coverage.overall.data.folder>
-        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
-        <maven-jacoco-plugin.version>0.8.11</maven-jacoco-plugin.version>
     </properties>
 
     <dependencies>
@@ -34,34 +32,34 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <argLine>
-                            --add-opens java.base/java.lang=ALL-UNNAMED
-                            --add-opens java.base/java.util=ALL-UNNAMED
-                            --add-opens java.base/java.io=ALL-UNNAMED
-                            -Dfile.encoding=UTF-8
-                            -Djdk.instrument.traceUsage=false
-                            -javaagent:"${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.7/byte-buddy-agent-1.17.7.jar"
-                        </argLine>
-                        <systemPropertyVariables>
-                            <jdk.attach.allowAttachSelf>true</jdk.attach.allowAttachSelf>
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+<!--        <pluginManagement>-->
+<!--            <plugins>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                    <configuration>-->
+<!--                        <includes>-->
+<!--                            <include>**/*Test.java</include>-->
+<!--                        </includes>-->
+<!--                        <argLine>-->
+<!--                            &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--                            &#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+<!--                            &#45;&#45;add-opens java.base/java.io=ALL-UNNAMED-->
+<!--                            -Dfile.encoding=UTF-8-->
+<!--                            -Djdk.instrument.traceUsage=false-->
+<!--                            -javaagent:"${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.7/byte-buddy-agent-1.17.7.jar"-->
+<!--                        </argLine>-->
+<!--                        <systemPropertyVariables>-->
+<!--                            <jdk.attach.allowAttachSelf>true</jdk.attach.allowAttachSelf>-->
+<!--                        </systemPropertyVariables>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.jacoco</groupId>-->
+<!--                    <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--                </plugin>-->
+<!--            </plugins>-->
+<!--        </pluginManagement>-->
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
